# Timber

./: .gitignore  CMakeLists.txt  README.md  build_and_run.ps1  build_and_run.sh  build_run.sh
.cache/clangd/index/: main.cpp.3E058FF35B9C8C1D.idx
src/: main.cpp
